--- a/IthembaHomeNewsPage.html
+++ b/IthembaHomeNewsPage.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="iThemba Home, charity, Home, woman, children, GBV">
         <meta name="author" content="Ithemba Home">
         <title>Ithemba Home | Restoring Hope To Mankind</title>
-        <link rel="stylesheet" href="../CSS/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
 
     <header>
@@ -170,4 +170,5 @@
         </footer>
         <script src="../JAVASCRIPT/JS.js">
         </script>
+
     </body>
