--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="index.html">
-                        <img class="IthembaHomelogo" src="/IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home Logo" title="Restoring Hope" />
+                        <img class="IthembaHomelogo" src="IthembaHomeLOGO.png" alt="Ithemba Home Logo" title="Restoring Hope" />
                     </a>
                 </div>
                 <nav>
@@ -79,3 +79,4 @@
     <script src="/JAVASCRIPT/JS.js"></script>
 </body>
 </html>
+
