--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="homefooter" id="footerSection">
             <div class="container">
                 <div class="newsLetterContainer">
-                    <img src="/IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home Logo" />
+                    <img src="IthembaHomeLOGO.png" alt="Ithemba Home Logo" />
                     <p>
                         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdKXPuRbTiJE7aGfPusAXFX3YWlGucplgGy6aw45rYeAxcbTg/viewform?embedded=true" width="440" height="425" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                     </p>
@@ -79,4 +79,5 @@
     <script src="/JAVASCRIPT/JS.js"></script>
 </body>
 </html>
+
 
