--- a/IthembHomeServicesPage.html
+++ b/IthembHomeServicesPage.html
@@ -17,7 +17,7 @@
                     <div class="container">
                         <div class="logo">
                             <a href="Home.html">
-                                <img class="IthembaHomelogo" src="../IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home Logo" height="" length="" title="Restoring Hope"></a>  
+                                <img class="IthembaHomelogo" src="IthembaHomeLOGO.png" alt="Ithemba Home Logo" height="" length="" title="Restoring Hope"></a>  
                         </div>
                         <nav>
                             <ul>
@@ -91,7 +91,7 @@
                     <div class="container">
                         <div class="newsLetterContainer">
                             <a href="IthembaHomeHomePage.html">
-                                <img class="IthembaHomelogo" src="../IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home Logo" height="" length="" title="Restoring Hope"></a>
+                                <img class="IthembaHomelogo" src="IthembaHomeLOGO.png" alt="Ithemba Home Logo" height="" length="" title="Restoring Hope"></a>
                             <input type="text" placeholder="Enter Your Email">
                         </div>
                         <div class="linksContainer">
@@ -132,3 +132,4 @@
                 </script>
 
             </body>
+
