--- a/IthembaHomeAboutPage.html
+++ b/IthembaHomeAboutPage.html
@@ -18,7 +18,7 @@
                     <div class="container">
                         <div class="logo">
                             <a href="Home.html">
-                                <img class="IthembaHomelogo" src="../IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home Logo" 
+                                <img class="IthembaHomelogo" src="IthembaHomeLOGO.png" alt="Ithemba Home Logo" 
                                 height="" length="" title="Restoring Hope"></a>
                         </div>
 
@@ -130,7 +130,7 @@
     <section class="homefooter" id="footerSection">
     <div class="container">
         <div class="newsLetterContainer">
-            <img src="../IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home Logo"/>
+            <img src="IthembaHomeLOGO.png" alt="Ithemba Home Logo"/>
             <p>
                 <input type="text" placeholder="Enter Your Email">
             </p>               
@@ -196,3 +196,4 @@
             
 
             
+
