--- a/IthembaHomeContactUsPage.html
+++ b/IthembaHomeContactUsPage.html
@@ -17,7 +17,7 @@
                     <div class="container">
                         <div class="logo">
                             <a href="IthembaHomeHomePage.html">
-                                <img class="IthembaHomelogo" src="../IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home Logo" height="" length="" title="Restoring Hope"></a>
+                                <img class="IthembaHomelogo" src="IthembaHomeLOGO.png" alt="Ithemba Home Logo" height="" length="" title="Restoring Hope"></a>
                         </div>
                         <nav>
                             <ul>
@@ -76,7 +76,7 @@
             <section class="homefooter" id="footerSection">
                 <div class="container">
                     <div class="newsLetterContainer">
-                        <img src="../IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home Logo"/>
+                        <img src="IthembaHomeLOGO.png" alt="Ithemba Home Logo"/>
                     <p>
                         <input type="text" placeholder="Enter Your Email">
                     </p>               
@@ -118,3 +118,4 @@
     </body>
 
 </html>
+
