--- a/IthembaHomeNewsPage.html
+++ b/IthembaHomeNewsPage.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="logo">
                 <a href="IthembaHomeHomePage.html">
-                    <img class="IthembaHomelogo" src="../IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home" height="" length="" title="Restoring Hope"></a>
+                    <img class="IthembaHomelogo" src="IthembaHomeLOGO.png" alt="Ithemba Home" height="" length="" title="Restoring Hope"></a>
             </div>
 
         <nav>
@@ -53,7 +53,7 @@
                 <div class="newsBox">
 
                     <div class="newsImg">
-                        <img src="../IMAGES/IthembaHomeChildrendrive.jpg" alt="A poster for inviting the public to come join Ithemba home provide food, shelter, educating and clothing to children at our address given below">
+                        <img src="IthembaHomeChildrendrive.jpg" alt="A poster for inviting the public to come join Ithemba home provide food, shelter, educating and clothing to children at our address given below">
                     </div>                
                     <div class="newsText">
                     <span>10 October 2023 /Matome Sibiya<span><br>
@@ -69,7 +69,7 @@
                 <div class="newsBox">
 
                     <div class="newsImg">
-                        <img src="../IMAGES/IthembaHomeneedsyou.jpg" alt="Ithemba Home is inviting communities to come be a part of the change. We need your help, please sign up below or contact us" height="6484">
+                        <img src="IthembaHomeneedsyou.jpg" alt="Ithemba Home is inviting communities to come be a part of the change. We need your help, please sign up below or contact us" height="6484">
                     </div>                
                     <div class="newsText">
                     <span>18 July 2023 /Patronella Zukisa<span><br>
@@ -86,7 +86,7 @@
                 <div class="newsBox">
 
                     <div class="newsImg">
-                        <img src="../IMAGES/Founder of Ithemba Home.jpg" alt="The founder of Ithemba Home reveals his face">
+                        <img src="Founder of Ithemba Home.jpg" alt="The founder of Ithemba Home reveals his face">
                     </div>                
                     <div class="newsText">
                     <span>18 July 2023 /Ithemba Home<span><br>
@@ -124,7 +124,7 @@
             <section class="homefooter" id="footerSection">
             <div class="container">
                 <div class="newsLetterContainer">
-                    <img src="../IMAGES/IthembaHomeLOGO.png" alt="Ithemba Home Logo"/>
+                    <img src="IthembaHomeLOGO.png" alt="Ithemba Home Logo"/>
                     <p>
 
                     </p>
@@ -172,3 +172,4 @@
         </script>
 
     </body>
+
