--- a/IthembaHomeAboutPage.html
+++ b/IthembaHomeAboutPage.html
@@ -25,7 +25,7 @@
                         <nav>
                             <ul>
                                 <li>
-                                    <a href="IthembaHomeHomePage.html">Homepage</a>
+                                    <a href="index.html">Homepage</a>
                                 </li>
                                 <li>
                                     <a href="IthembaHomeAboutPage.html">About us</a>
@@ -139,7 +139,7 @@
             <div class="title">Useful Links</div>
             <ul>
                 <li>
-                    <a href="IthembaHomeHomePage.html">Homepage</a>
+                    <a href="index.html">Homepage</a>
                 </li>
                 <li>
                     <a href="IthembaHomeAboutPage.html">About us</a>
@@ -196,4 +196,5 @@
             
 
             
+
 
