--- a/IthembaHomeAboutPage.html
+++ b/IthembaHomeAboutPage.html
@@ -24,21 +24,11 @@
 
                         <nav>
                             <ul>
-                                <li>
-                                    <a href="index.html">Homepage</a>
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeAboutPage.html">About us</a>
-                                </li>
-                                <li>
-                                    <a href="IthembHomeServicesPage.html">Services</a>
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeNewsPage.html">News</a>  
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeContactUsPage.html">Contact Us</a>
-                                </li>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
+                        <li><a href="IthembHomeServicesPage.html">Services</a></li>
+                        <li><a href="IthembaHomeNewsPage.html">News</a></li>
+                        <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
                             </ul>
                         </nav>
 
@@ -138,21 +128,11 @@
         <div class="linksContainer">
             <div class="title">Useful Links</div>
             <ul>
-                <li>
-                    <a href="index.html">Homepage</a>
-                </li>
-                <li>
-                    <a href="IthembaHomeAboutPage.html">About us</a>
-                </li>
-                <li>
-                    <a href="IthembHomeServicesPage.html">Services</a>
-                </li>
-                <li>
-                    <a href="IthembaHomeNewsPage.html">News</a>  
-                </li>
-                <li>
-                    <a href="IthembaHomeContactUsPage.html">Contact Us</a>
-                </li>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
+                        <li><a href="IthembHomeServicesPage.html">Services</a></li>
+                        <li><a href="IthembaHomeNewsPage.html">News</a></li>
+                        <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
             </ul>
                 <br>
                 <p1> &copy;2010&mdash;<span id="curYr"></span> Ithemba Home. All Rights Reserved</p1>
@@ -196,5 +176,6 @@
             
 
             
+
 
 
