--- a/IthembHomeServicesPage.html
+++ b/IthembHomeServicesPage.html
@@ -21,21 +21,11 @@
                         </div>
                         <nav>
                             <ul>
-                                <li>
-                                    <a href="IthembaHomeHomePage.html">Homepage</a>
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeAboutPage.html">About us</a>
-                                </li>
-                                <li>
-                                    <a href="IthembHomeServicesPage.html">Services</a>
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeNewsPage.html">News</a>  
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeContactUsPage.html">Contact Us</a>
-                                </li>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
+                        <li><a href="IthembHomeServicesPage.html">Services</a></li>
+                        <li><a href="IthembaHomeNewsPage.html">News</a></li>
+                        <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -97,21 +87,11 @@
                         <div class="linksContainer">
                             <div class="title">Useful Links</div>
                             <ul>
-                                <li>
-                                    <a href="IthembaHomeHomePage.html">Homepage</a>
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeAboutPage.html">About us</a>
-                                </li>
-                                <li>
-                                    <a href="IthembHomeServicesPage.html">Services</a>
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeNewsPage.html">News</a>  
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeContactUsPage.html">Contact Us</a>
-                                </li>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
+                        <li><a href="IthembHomeServicesPage.html">Services</a></li>
+                        <li><a href="IthembaHomeNewsPage.html">News</a></li>
+                        <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
                             </ul>
                             <br>
                             <p1> &copy;2023 Ithemba Home. All Rights Reserved</p1>
@@ -132,4 +112,5 @@
                 </script>
 
             </body>
+
 
