--- a/IthembaHomeNewsPage.html
+++ b/IthembaHomeNewsPage.html
@@ -20,21 +20,11 @@
 
         <nav>
             <ul>
-                <li>
-                    <a href="IthembaHomeHomePage.html">Homepage</a>
-                </li>
-                <li>
-                    <a href="IthembaHomeAboutPage.html">About us</a>
-                </li>
-                <li>
-                    <a href="IthembHomeServicesPage.html">Services</a>
-                </li>
-                <li>
-                    <a href="IthembaHomeNewsPage.html">News</a>  
-                </li>
-                <li>
-                    <a href="IthembaHomeContactUsPage.html">Contact Us</a>
-                </li>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
+                        <li><a href="IthembHomeServicesPage.html">Services</a></li>
+                        <li><a href="IthembaHomeNewsPage.html">News</a></li>
+                        <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
             </ul>
         </nav>
         </div>
@@ -136,21 +126,11 @@
                     <div class="title">Useful Links</div>
                     <ul>
                         <ul>
-                            <li>
-                                <a href="IthembaHomeHomePage.html">Homepage</a>
-                            </li>
-                            <li>
-                                <a href="IthembaHomeAboutPage.html">About us</a>
-                            </li>
-                            <li>
-                                <a href="IthembHomeServicesPage.html">Services</a>
-                            </li>
-                            <li>
-                                <a href="IthembaHomeNewsPage.html">News</a>  
-                            </li>
-                            <li>
-                                <a href="IthembaHomeContactUsPage.html">Contact Us</a>
-                            </li>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
+                        <li><a href="IthembHomeServicesPage.html">Services</a></li>
+                        <li><a href="IthembaHomeNewsPage.html">News</a></li>
+                        <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
                         </ul>
                     <br>
                     <p1> &copy;2023 Ithemba Home. All Right Reserved</p1>
@@ -172,4 +152,5 @@
         </script>
 
     </body>
+
 
