--- a/IthembaHomeContactUsPage.html
+++ b/IthembaHomeContactUsPage.html
@@ -21,21 +21,11 @@
                         </div>
                         <nav>
                             <ul>
-                                <li>
-                                    <a href="IthembaHomeHomePage.html">Homepage</a>
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeAboutPage.html">About us</a>
-                                </li>
-                                <li>
-                                    <a href="IthembHomeServicesPage.html">Services</a>
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeNewsPage.html">News</a>  
-                                </li>
-                                <li>
-                                    <a href="IthembaHomeContactUsPage.html">Contact Us</a>
-                                </li>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
+                        <li><a href="IthembHomeServicesPage.html">Services</a></li>
+                        <li><a href="IthembaHomeNewsPage.html">News</a></li>
+                        <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -84,21 +74,11 @@
                     <div class="linksContainer">
                         <div class="title">Useful Links</div>
                         <ul>
-                            <li>
-                                <a href="IthembaHomeHomePage.html">Homepage</a>
-                            </li>
-                            <li>
-                                <a href="IthembaHomeAboutPage.html">About us</a>
-                            </li>
-                            <li>
-                                <a href="IthembHomeServicesPage.html">Services</a>
-                            </li>
-                            <li>
-                                <a href="IthembaHomeNewsPage.html">News</a>  
-                            </li>
-                            <li>
-                                <a href="IthembaHomeContactUsPage.html">Contact Us</a>
-                            </li>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
+                        <li><a href="IthembHomeServicesPage.html">Services</a></li>
+                        <li><a href="IthembaHomeNewsPage.html">News</a></li>
+                        <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
                         </ul>
                                     <br>
                                 <p1> &copy;2010&mdash;<span id="curYr"></span> Ithemba Home. All Rights Reserved</p1>
@@ -118,4 +98,5 @@
     </body>
 
 </html>
+
 
