--- a/IthembaHomeAboutPage.html
+++ b/IthembaHomeAboutPage.html
@@ -109,36 +109,37 @@
 </section>
 
 <!-- ================= FOOTER ================= -->
-<footer class="aboutfooter">
-    <section class="homefooter" id="footerSection">
-        <div class="container">
+    <footer>
+        <section class="homefooter" id="footerSection">
+            <div class="container">
+                <div class="newsLetterContainer">
+                    <p>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdKXPuRbTiJE7aGfPusAXFX3YWlGucplgGy6aw45rYeAxcbTg/viewform?embedded=true" width="440" height="425" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    </p>
+                </div>
 
-            <div class="newsLetterContainer">
-                <input type="email" placeholder="Enter Your Email">
+                <div class="linksContainer">
+                    <div class="title">Useful Links</div>
+                    <ul>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
+                        <li><a href="IthembHomeServicesPage.html">Services</a></li>
+                        <li><a href="IthembaHomeNewsPage.html">News</a></li>
+                        <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
+                    </ul>
+                    <br />
+                    <p>&copy;2010&mdash;<span id="curYr"></span> Ithemba Home. All Rights Reserved</p>
+                </div>
+
+                <div class="connectContainer">
+                    <div class="title">Contact Us</div>
+                    <p>Johannesburg, 6737 Thlapolome St, Vosloorus, 1475, Boksburg</p>
+                    <p>enquire@ithembahome.org</p>
+                    <p>0860 236 911</p>
+                </div>
             </div>
-
-            <div class="linksContainer">
-                <div class="title">Useful Links</div>
-                <ul>
-                    <li><a href="index.html">Homepage</a></li>
-                    <li><a href="IthembaHomeAboutPage.html">About us</a></li>
-                    <li><a href="IthembHomeServicesPage.html">Services</a></li>
-                    <li><a href="IthembaHomeNewsPage.html">News</a></li>
-                    <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
-                </ul>
-                <p>&copy;2010—<span id="curYr"></span> Ithemba Home. All Rights Reserved</p>
-            </div>
-
-            <div class="connectContainer">
-                <div class="title">Contact Us</div>
-                <p>Johannesburg, 6737 Thlapolome St, Vosloorus, 1475, Boksburg</p>
-                <p>enquire@ithembahome.org</p>
-                <p>0860 236 911</p>
-            </div>
-
-        </div>
-    </section>
-</footer>
+        </section>
+    </footer>
 
 <!-- ================= BACK TO TOP ================= -->
 <button id="backToTopBtn">Back to Top</button>
@@ -164,6 +165,7 @@ document.addEventListener("DOMContentLoaded", function () {
             
 
             
+
 
 
 
