--- a/IthembHomeServicesPage.html
+++ b/IthembHomeServicesPage.html
@@ -93,32 +93,27 @@
         </div>
     </section>
 
-    <!-- FOOTER -->
+<!-- ================= FOOTER ================= -->
     <footer>
         <section class="homefooter" id="footerSection">
             <div class="container">
-
                 <div class="newsLetterContainer">
-                    <a href="index.html">
-                        <img 
-                            src="IthembaHomeLOGO.png"
-                            alt="Ithemba Home Logo"
-                            class="IthembaHomelogo"
-                        />
-                    </a>
-                    <input type="email" placeholder="Enter Your Email">
+                    <p>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdKXPuRbTiJE7aGfPusAXFX3YWlGucplgGy6aw45rYeAxcbTg/viewform?embedded=true" width="440" height="425" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    </p>
                 </div>
 
                 <div class="linksContainer">
                     <div class="title">Useful Links</div>
                     <ul>
                         <li><a href="index.html">Homepage</a></li>
-                        <li><a href="IthembaHomeAboutPage.html">About Us</a></li>
+                        <li><a href="IthembaHomeAboutPage.html">About us</a></li>
                         <li><a href="IthembHomeServicesPage.html">Services</a></li>
                         <li><a href="IthembaHomeNewsPage.html">News</a></li>
                         <li><a href="IthembaHomeContactUsPage.html">Contact Us</a></li>
                     </ul>
-                    <p>&copy; 2023 Ithemba Home. All Rights Reserved</p>
+                    <br />
+                    <p>&copy;2010&mdash;<span id="curYr"></span> Ithemba Home. All Rights Reserved</p>
                 </div>
 
                 <div class="connectContainer">
@@ -127,23 +122,14 @@
                     <p>enquire@ithembahome.org</p>
                     <p>0860 236 911</p>
                 </div>
-
             </div>
         </section>
-
-        <!-- INSTAGRAM EMBED (UNCHANGED) -->
-        <blockquote 
-            class="instagram-media"
-            data-instgrm-permalink="https://www.instagram.com/reel/CzbVo98NGCj/"
-            data-instgrm-version="14">
-        </blockquote>
-
-        <script async src="//www.instagram.com/embed.js"></script>
     </footer>
 
     <script src="../JAVASCRIPT/JS.js"></script>
 
 </body>
 </html>
+
 
 
